<resources>
    <string name="app_name">projectLanguage</string>
    <string name="LearnFrench">Apprendre le français</string>
    <string name="LearnEnglish">Apprendre l'anglais</string>
    <string name="LearnGerman">Apprendre l'allemand</string>
    <string name="DifficultyBegginer">Cours débutants</string>
    <string name="DifficultyAdvanced">Cours intermédiraires</string>
    <string name="DifficutlyExpert">Cours experts</string>
    <string name="Exercice1">Exercice 1: Vocabulaire</string>
    <string name="Exercice2">Exercice 2: Choix multiples</string>
    <string name="Exercice3">Exercice 3: Textes à trous</string>
    <string name="Vocabulaire">Vocabulaire</string>
    <string name="RuleVocabulary">Etudiez le vocabulaire</string>

    <string name="Rouge">Rouge</string>
    <string name="Bleu">Bleu</string>
    <string name="Blanc">Blanc</string>
    <string name="Vert">Vert</string>
    <string name="Orange_FR">Orange</string>

    <string name="Red">Red</string>
    <string name="Blue">Blue</string>
    <string name="White">White</string>
    <string name="Green">Green</string>
    <string name="Organce_EN">Orange</string>
    
</resources>
