<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_vocabulaire"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mycompany.projectlanguage.Vocabulaire">

    <QuickContactBadge
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="?attr/actionModeCloseDrawable"
        android:id="@+id/BackToChoixExercice" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/BackToChoixExercice"
        android:layout_alignParentStart="true"
        android:id="@+id/Vocabulaire">

        <TextView
            android:text="@string/Vocabulaire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:textSize="36sp"
            android:layout_below="@+id/BackToChoixExercice"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/black" />

        <TextView
            android:text="@string/RuleVocabulary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:weightSum="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.59">

                <TextView
                    android:text="@string/Rouge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Rouge"
                    android:textSize="30sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:text="@string/Bleu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Bleu"
                    android:textSize="30sp"
                    android:textColor="@android:color/black"
                    android:background="?attr/colorButtonNormal" />

                <TextView
                    android:text="@string/Blanc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Blanc"
                    android:textSize="30sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:text="@string/Vert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Vert"
                    android:textSize="30sp"
                    android:textColor="@android:color/black"
                    android:background="?attr/colorButtonNormal" />

                <TextView
                    android:text="@string/Orange_FR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Orange_FR"
                    android:textSize="30sp"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="129dp"
                android:layout_height="match_parent"
                android:layout_weight="0.32">

                <TextView
                    android:text="@string/Red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Red"
                    android:textSize="30sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:text="@string/Blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Blue"
                    android:textSize="30sp"
                    android:textColor="@android:color/black"
                    android:background="?attr/colorButtonNormal" />

                <TextView
                    android:text="@string/White"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/White"
                    android:textSize="30sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:text="@string/Green"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    android:textSize="30sp"
                    android:textColor="@android:color/black"
                    android:background="?attr/colorButtonNormal" />

                <TextView
                    android:text="@string/Organce_EN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:textSize="30sp"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:text='Cliquer sur "Tester lorsque vous êtes prêt'
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Tester"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="73dp"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <Button
        android:text="Tester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp" />

</RelativeLayout>
