<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choix_langues"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mycompany.projectlanguage.ChoixLangues">

    <QuickContactBadge
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_preferences"
        android:id="@+id/Menu" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Menu"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LearnFrench"
            android:textAlignment="center"
            android:text="@string/LearnFrench" />

        <Button
            android:text="@string/LearnGerman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LearnGerman" />

        <Button
            android:text="@string/LearnEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LearnEnglish" />
    </LinearLayout>

</RelativeLayout>
