<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choix_difficulte"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mycompany.projectlanguage.ChoixDifficulte">

    <QuickContactBadge
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="?android:attr/actionModeCloseDrawable"
        android:id="@+id/BackToChoixLanguage"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/BackToChoixLanguage"
        android:layout_marginTop="24dp">>


        <Button
            android:text="@string/DifficultyBegginer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/DifficutlyBegginer" />

        <Button
            android:text="@string/DifficultyAdvanced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/DifficultyAdvanced" />

        <Button
            android:text="@string/DifficutlyExpert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/DifficultyExpert" />
    </LinearLayout>

</RelativeLayout>
