<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_vocabulaire_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mycompany.projectlanguage.VocabulaireTest">

    <QuickContactBadge
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="?attr/actionModeCloseDrawable"
        android:id="@+id/BackToVocabulaire" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/BackToVocabulaire"
        android:layout_alignParentStart="true"
        android:id="@+id/Vocabulaire">

        <TextView
            android:text="@string/Vocabulaire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:textSize="36sp"
            android:layout_below="@+id/BackToVocabulaire"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/black" />

        <TextView
            android:text="Complétez le vocabulaire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:weightSum="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.59">

                <TextView
                    android:text="@string/Rouge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Rouge"
                    android:textSize="30sp"
                    android:textColor="@android:color/black"
                    android:minHeight="55dp"
                    android:translationY="2dp"
                    android:background="@color/common_google_signin_btn_text_light_disabled"
                    android:gravity="center_vertical" />


                <TextView
                    android:text="@string/Bleu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Bleu"
                    android:textSize="30sp"
                    android:textColor="@android:color/black"
                    android:minHeight="55dp"
                    android:translationY="2dp"
                    android:gravity="center_vertical" />

                <TextView
                    android:text="@string/Blanc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Blanc"
                    android:textSize="30sp"
                    android:textColor="@android:color/black"
                    android:minHeight="55dp"
                    android:translationY="2dp"
                    android:background="@color/common_google_signin_btn_text_light_disabled"
                    android:gravity="center_vertical" />

                <TextView
                    android:text="@string/Vert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Vert"
                    android:textSize="30sp"
                    android:textColor="@android:color/black"
                    android:minHeight="55dp"
                    android:translationY="2dp"
                    android:gravity="center_vertical" />

                <TextView
                    android:text="@string/Orange_FR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Orange_FR"
                    android:textSize="30sp"
                    android:textColor="@android:color/black"
                    android:minHeight="55dp"
                    android:translationY="2dp"
                    android:background="@color/common_google_signin_btn_text_light_disabled"
                    android:gravity="center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.13">

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.32">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText5"
                    android:textSize="30sp"
                    android:singleLine="false"
                    android:selectAllOnFocus="false"
                    android:minHeight="55dp"
                    android:background="@color/common_google_signin_btn_text_light_disabled" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText4"
                    android:textSize="30sp"
                    android:minHeight="55dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText3"
                    android:textSize="30sp"
                    android:minHeight="55dp"
                    android:background="@color/common_google_signin_btn_text_light_disabled" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText2"
                    android:textSize="30sp"
                    android:minHeight="55dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText"
                    android:textSize="30sp"
                    android:minHeight="55dp"
                    android:background="@color/common_google_signin_btn_text_light_disabled" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:text="Vérifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp" />

</RelativeLayout>
