<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choix_exercices"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mycompany.projectlanguage.ChoixExercices">

    <QuickContactBadge
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="?attr/actionModeCloseDrawable"
        android:id="@+id/BackToChoixDifficulte"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BackToChoixDifficulte"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/Exercice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Exercice1"
                android:layout_weight="35"
                android:textAlignment="textStart" />

            <CheckBox
                android:text="Réussi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox3"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/Exercice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Exercice2"
                android:layout_weight="35"
                android:textAlignment="textStart" />

            <CheckBox
                android:text="Réussi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox2"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/Exercice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Exercice3"
                android:layout_weight="35"
                android:elevation="0dp"
                android:textAlignment="textStart" />

            <CheckBox
                android:text="Réussi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
